update java 17 to 21